Changes for 2.1.9

New features:
.....J.... [ZBXNEXT-1776] added support for java.math.BigDecimal, java.math.BigInteger and some other open types (asaveljevs)
..F.I..... [ZBXNEXT-715] increased the size of sysmaps_elements.label and sysmaps_links.label fields to 2048 characters (Sasha)

Bug fixes:
A.F....... [ZBX-7165] fixed snmp fields validation in item configuration (Eduard)
..F....... [ZBX-5942] fixed setup navigation (Eduard, Pavels)
..F....... [ZBX-7137] fixed macros resolving in inventory host interfaces (Eduard)
...G...PS. [ZBX-7206] fixed arithmetic expressions in C macros not being wrapped in parentheses (asaveljevs)
........S. [ZBX-7185] fixed escalations being cancelled by unrelated events (asaveljevs)
..F....... [ZBX-6244] fixed setting cookies as secure under https (Ivo)
A.F....... [ZBX-7171] fixed displaying correct percentages in item and trigger error messages (Ivo)
....I..... [ZBX-5590] fixed item multiplier for jmx["java.lang:type=Compilation",TotalCompilationTime] (asaveljevs)
....I..... [ZBX-6577] improved "Template JMX Generic" by adding some interesting items and triggers (asaveljevs)
..F....... [ZBX-7189] fixed web monitoring items not being displayed in Monitoring -> Latest data (Eduard)
A.F....... [ZBX-7170] improved performance of item.get method and other API requests with "selectItems" option (Ivo)
..F....... [ZBX-7144] fixed table column widths in Monitoring -> Latest data (Ivo)
A......... [ZBX-7152] fixed get method subselects not working correctly if a specific node is selected (Ivo)
..F....... [ZBX-7180] fixed table colours in user right assignment lists (Eduard)
..F....... [ZBX-7085] fixed gettext errors when omitting the number placeholder in singular form translations (Pavels)

--------------------------------------------------------------------------------
Changes for 2.1.8

New features:
.....J.... [ZBX-6404] added support for values of type java.lang.Double when toString() returns them in scientific format (asaveljevs)